# Nara

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INVARIANTS.md  MANIFEST.in  NARA_FREEZE.json  NARA_SPEC.md  README.md  dump_nara_codebase.py  pyproject.toml  run_nara.py  run_nara_artifacts.py  run_nara_audit.py  run_nara_regression_pack.py  run_nara_web.py  setup.cfg  setup_nara.py  split_dump.py
docs/: RELEASING.md
nara/: __main__.py
nara/adapters/: js_adapter.py  python_adapter.py
nara/composition/: compatibility.py  extract.py  interfaces.py  propagation.py
nara/contracts/: builder.py  defaults.py  evaluator.py  model.py  schema.py  violations.py
nara/core/: advanced_planner.py  artifacts.py  assumptions.py  classifier.py  confidence.py  confidence_gate.py  contract_enforcer.py  detector.py  diff.py  diff_guard.py  domain_guard.py  executor.py  failure_attribution.py  failure_patterns.py  graph.py  graph_executor.py  guard.py  human.py  intent.py  intent_guard.py  intent_rules.py  loop.py  memory.py  meta_classifier.py  meta_loop.py  parallel_guard.py  patterns.py  planner.py  planner_fallback.py  planner_reflection.py  preflight.py  provenance.py  repair.py  repair_candidates.py  repair_score.py  replay.py  spec_validator.py  static_analysis.py  validator.py
nara/domains/: ai.py  analysis_domain.py  analysis_runtime.py  artifact.py  base.py  build.py  capabilities.json  capabilities.py  compiled.py  compiled_runtime.py  confidence.py  contracts.py  (+28 more)
scripts/: build_release.ps1  dev_install.ps1  install_wheel.ps1  run_tests.ps1
tests/: golden_intents.json
(+156 files in other folders)
